fix: Prevent BookmarkClassifier from re-rendering on tab change and add z-index to outlined elements.

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -102,6 +102,7 @@ a {
     outline-offset: -1px;
     outline-style: solid;
     outline-color: black;
+    z-index: 1;
   }
 }
 
